@@ -1,3 +1,8 @@
+Sat May 29 12:05:51 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/rdoc/rdoc.rb (RDoc#read_file_contents): take care of BOM.
+	  [ruby-dev:41452]
+
 Sat May 29 09:34:32 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* test/ruby/envutil.rb: fix for --disable-gems.
